force-app/main/default/objects/Purpose_of_Financing__c/Purpose_of_Financing__c.object-meta.xml
<CustomObject>
    <label>Purpose of Financing</label>
    <nameField>
        <label>Purpose of Financing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purposes of Financing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>