force-app/main/default/objects/Purpose_of_Financing__c/fields/level__c.field-meta.xml
<CustomField>
    <fullName>level__c</fullName>
    <label>level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>