force-app/main/default/objects/Purpose_of_Financing__c/fields/parent_id__c.field-meta.xml
<CustomField>
    <fullName>parent_id__c</fullName>
    <label>parent id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>